<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:orientation="vertical"
    tools:context=".ToDoInfoActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#3D444C"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="@string/to_do_description" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
            <ImageView
                android:id="@+id/degree_flag"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:src="@drawable/red_flag" />
            <TextView
                android:id="@+id/degree_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urgent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="@string/to_do_create_date" />

        <TextView
            android:id="@+id/deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="@string/to_do_deadline" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="20dp">
            <RadioButton
                android:id="@+id/radioOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <RadioButton
                android:id="@+id/radioDevelopment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/development"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <RadioButton
                android:id="@+id/radioUploading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploading"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <RadioButton
                android:id="@+id/radioReject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <RadioButton
                android:id="@+id/radioClosed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:backgroundTint="#3D444C"
            app:cardCornerRadius="5dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/btnOK"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/ok"
                android:gravity="center"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>