<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:orientation="vertical"
    tools:context=".AddToDoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#3D444C"
        android:gravity="center"
        android:text="@string/add_to_do"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp" />


    <EditText
        android:id="@+id/toDoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edt_style"
        android:hint="@string/to_do_name"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#B6B6B6"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/toDoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edt_style"
        android:hint="@string/to_do_description"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#B6B6B6"
        android:textSize="25sp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_margin="20dp"
        android:background="@drawable/edt_style"
        android:paddingStart="1dp"
        android:paddingEnd="1dp" />

    <EditText
        android:id="@+id/toDoDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edt_style"
        android:hint="@string/to_do_create_date"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#B6B6B6"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/toDoDedline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edt_style"
        android:hint="@string/to_do_deadline"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#B6B6B6"
        android:textSize="25sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Save"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#3D444C"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp" />

</LinearLayout>